fix the nav bar alignment issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -397,7 +397,7 @@ Dark mode
 }
 .dark-mode .dropdown-custom-theme  {
   background-color: rgb(211,211,211) ;
-  color: rgb(76, 76, 76) !important;
+  color: rgb(100,100,100) !important;
 }
 
 .dark-mode .sidebar {
@@ -405,7 +405,7 @@ Dark mode
 }
 
 .dark-mode .a {
-  background: rgb(76, 76, 76);
+  background: rgb(100,100,100);
 }
 
 /*
