--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,63 +1,57 @@
-/*@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);*/
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
 
-/*.get-start {*/
-/*    margin-bottom: 40px;*/
-/*}*/
-
-/*.start-button {*/
-/*  background-color: rgb(155,35,33);*/
-/*  border: 0;*/
-/*  border-radius: 56px;*/
-/*  color: #fff;*/
-/*  cursor: pointer;*/
-/*  display: inline-block;*/
-/*  font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;*/
-/*  font-size: 18px;*/
-/*  font-weight: 600;*/
-/*  outline: 0;*/
-/*  padding: 16px 21px;*/
-/*  position: relative;*/
-/*  text-align: center;*/
-/*  text-decoration: none;*/
-/*  transition: all .3s;*/
-/*  user-select: none;*/
-/*  -webkit-user-select: none;*/
-/*  touch-action: manipulation;*/
-/*}*/
-
-/*.start-button:before {*/
-/*  background-color: initial;*/
-/*  background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);*/
-/*  border-radius: 125px;*/
-/*  content: "";*/
-/*  height: 50%;*/
-/*  left: 4%;*/
-/*  opacity: .5;*/
-/*  position: absolute;*/
-/*  top: 0;*/
-/*  transition: all .3s;*/
-/*  width: 92%;*/
-/*}*/
-
-/*.start-button:hover {*/
-/*  box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;*/
-/*  transform: scale(1.05);*/
-/*}*/
-
-/*@media (min-width: 768px) {*/
-/*  .start-button {*/
-/*    padding: 16px 48px;*/
-/*  }*/
-/*}*/
-
-
-a{
-    text-decoration: none;
+.get-start {
+    margin-bottom: 40px;
 }
 
-table#dataTable {
-    width: 100%;
+.start-button {
+  background-color: rgb(155,35,33);
+  border: 0;
+  border-radius: 56px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  outline: 0;
+  padding: 16px 21px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
+
+.start-button:before {
+  background-color: initial;
+  background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
+  border-radius: 125px;
+  content: "";
+  height: 50%;
+  left: 4%;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  transition: all .3s;
+  width: 92%;
+}
+
+.start-button:hover {
+  box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+  transform: scale(1.05);
+}
+
+@media (min-width: 768px) {
+  .start-button {
+    padding: 16px 48px;
+  }
+}
+
+
+
 
 .icon-btn {
     width: 1em;
@@ -139,6 +133,13 @@ animation: slideIn 0.5s ease-in-out;
         transition: all .3s ease-in-out;
       }
 
+a{
+    text-decoration: none;
+}
+
+table#dataTable {
+    width: 100%;
+}
 
 .searchbar-container {
     max-width: 600px;
@@ -161,10 +162,10 @@ animation: slideIn 0.5s ease-in-out;
     border-radius: 30px;
     width: 40px;
     height: 40px;
+    display: block;
+    margin: auto;
 }
 
-.avatar img {
-    border-radius: inherit;
-    width: inherit;
-    height: inherit;
+.td {
+    text-align: center;
 }
